--- a/kanihi/src/main/res/layout/main_navigation.xml
+++ b/kanihi/src/main/res/layout/main_navigation.xml
@@ -17,5 +17,5 @@
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:dividerHeight="1dp"
-        android:background="#FF0000"/>
+        android:background="#fff"/>
 </android.support.v4.widget.DrawerLayout>
