MainNavigationActivity: don't set absolute width on drawer

--- a/kanihi/src/main/res/layout/main_navigation.xml
+++ b/kanihi/src/main/res/layout/main_navigation.xml
@@ -12,7 +12,7 @@
 
     <ListView
         android:id="@+id/menu_list"
-        android:layout_width="240dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
