--- a/kanihi/src/main/res/layout/main_navigation_row.xml
+++ b/kanihi/src/main/res/layout/main_navigation_row.xml
@@ -12,17 +12,18 @@
     <ImageView
         android:id="@+id/image"
         android:adjustViewBounds="true"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
+        android:layout_height="25dp"
+        android:layout_width="25dp"
         android:layout_gravity="left"
-        android:paddingRight="20dp"
         android:src="@drawable/note"/>
 
     <TextView
         android:id="@+id/main"
+        android:paddingLeft="20dp"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
         android:layout_weight="1"
+        android:textSize="16dp"
         android:text="@string/text_placeholder"
         android:gravity="center_vertical"/>
 
