--- a/kanihi/src/main/res/layout/playlist_row_track.xml
+++ b/kanihi/src/main/res/layout/playlist_row_track.xml
@@ -4,7 +4,7 @@
     android:layout_height="60dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:background="#fff">
+    android:background="@drawable/list_item_bg_colors">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,10 +27,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical">
 
-            <TextView
+            <CheckedTextView
                 android:id="@+id/left_text"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/playlist_row_text_colors"
                 android:textSize="14sp"/>
 
             <TextView
