--- a/kanihi/src/main/res/layout/music_player.xml
+++ b/kanihi/src/main/res/layout/music_player.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent"
     android:background="#fff">
 
-    <ImageView
-        android:layout_width="wrap_content"
+    <net.cjlucas.kanihi.views.SquareImageView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
         android:id="@+id/imageView"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
@@ -79,10 +80,6 @@
                 android:src="@drawable/next"/>
 
             </LinearLayout>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:id="@+id/time_info"
