--- a/kanihi/src/main/res/layout/single_album_list_header_view.xml
+++ b/kanihi/src/main/res/layout/single_album_list_header_view.xml
@@ -3,23 +3,28 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="340dp">
-    <RelativeLayout
+
+    <ImageView
         android:id="@+id/album_background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="fill_parent"
+        android:scaleType="fitXY"
+        android:alpha="0"
+        android:layout_height="fill_parent" />
 
         <RelativeLayout
-            android:layout_width="match_parent" android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:paddingTop="20dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:paddingBottom="10dp"
+            android:gravity="center"
             android:background="#99000000">
 
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:id="@+id/imageView"
                 android:layout_centerHorizontal="true" />
 
             <TextView
@@ -56,7 +61,4 @@
                 android:paddingTop="2dp" />
 
         </RelativeLayout>
-
-    </RelativeLayout>
-
 </FrameLayout>
