--- a/kanihi/src/main/res/layout/music_player.xml
+++ b/kanihi/src/main/res/layout/music_player.xml
@@ -41,31 +41,39 @@
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
             <TextView
+                android:id="@+id/track_artist_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/track_artist_name"
+                android:singleLine="true"
+                android:ellipsize="end"
                 android:layout_above="@+id/track_title"
                 android:layout_centerHorizontal="true" />
 
             <TextView
+                android:id="@+id/track_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/track_title"
                 android:textStyle="bold"
+                android:singleLine="true"
+                android:ellipsize="end"
                 android:layout_above="@+id/album_name"
                 android:layout_centerHorizontal="true"/>
 
             <TextView
+                android:id="@+id/album_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="20dp"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/album_name"
+                android:singleLine="true"
+                android:ellipsize="end"
                 android:layout_centerHorizontal="true"
                 android:layout_above="@+id/controls" />
 
