MusicPlayerFragment: Added UpdatePlayerInfoUiTask

--- a/kanihi/src/main/res/layout/music_player.xml
+++ b/kanihi/src/main/res/layout/music_player.xml
@@ -124,24 +124,25 @@
                 android:paddingBottom="10dp">
 
                 <TextView
-                    android:layout_width="0px"
+                    android:id="@+id/time_elapsed"
+                    android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:layout_weight=".1"
                     android:gravity="center_vertical"
                     android:text="0:00" />
 
                 <SeekBar
-                    android:layout_width="0px"
+                    android:id="@+id/time_progress_bar"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight=".8"/>
+                    android:layout_weight="1"/>
 
 
                 <TextView
-                    android:layout_width="0px"
+                    android:id="@+id/time_remaining"
+                    android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
                     android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:layout_weight=".1"
                     android:gravity="center_vertical"
                     android:text="-0:00" />
 
